# game-engine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
cmake/: .mingw-w64-x86_64.cmake.swp  (+1 more)
engine/: CMakeLists.txt
engine/assets/basicShapes/: plane.h
engine/assets/fonts/: Monospaced.fnt
engine/assets/shaders/: ShaderSource.h
engine/include/engine/: application.h  camera.h  collisionsystem.h  delegate.h  gameobject.h  gravitysystem.h  inputcomponent.h  inputmanager.h  keyframes.h  mesh.h  movementsystem.h  physics.h  playerbehavior.h  renderer.h  scene.h  sfml_renderer.h  shader.h  shaderinfo.h  systembase.h  texture.h  texturemanager.h  texturestorage.h  transform.h  transformer.h  velocity.h
engine/include/engine/components/: componentsorter.h  inputcomponent.h  mesh.h  physics.h  textcomponent.h  tilemap.h  transform.h  velocity.h
engine/include/engine/core/: delegate.h  gamemode.h  gameobject.h  object.h  playerstate.h  scene.h  scenemanager.h
engine/include/engine/graphics/: camera.h  fontcharacterinfo.h  keyframes.h  meshrenderer.h  renderer.h  shaderinfo.h  texture.h  texturemanager.h  texturestorage.h  uirenderer.h
engine/include/engine/input/: inputmanager.h
engine/include/engine/systems/: collisionsystem.h  gravitysystem.h  movementsystem.h  playerbehavior.h  systembase.h
engine/include/engine/util/: collisionutils.h  fontserializer.h  transformer.h
engine/src/: application.cpp  glad_gl.c
engine/src/components/: componentsorter.cpp  inputcomponent.cpp  mesh.cpp  textcomponent.cpp  texture.cpp  tilemap.cpp
engine/src/core/: gameobject.cpp  scene.cpp  scenemanager.cpp
engine/src/game/: application.cpp  gameobject.cpp  scene.cpp
engine/src/gameframework/: gameobject.cpp  scene.cpp
engine/src/graphics/: meshrenderer.cpp  shader.cpp  uirenderer.cpp
engine/src/input/: inputmanager.cpp
engine/src/shader/: shader.cpp
engine/src/systems/: collisionsystem.cpp  gravitysystem.cpp  movementsystem.cpp  playerbehavior.cpp  renderer.cpp
engine/src/util/: texturemanager.cpp  transformer.cpp
engine/test/: collisionsystemtest.cpp  collisionsystemtest.h
ext/: CMakeLists.txt
ext/glfw-3.3.2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
ext/glfw-3.3.2/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
ext/glfw-3.3.2/src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  glfw_config.h  internal.h
ext/glfw-3.3.2/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  triangle-vulkan.vcxproj  (+3 more)
peli1/src/: CMakeLists.txt  application.cpp  application.h  main_project1.cpp
peli1/src/behaviors/: playerbehavior.cpp  playerbehavior.h  systembase.h  transformer.cpp  transformer.h
peli1/src/components/: mass.h  mesh.h  physics.h  shaderinfo.h
peli1/src/game/: camera.h  gameobject.cpp  gameobject.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h
peli1/src/game/gameobject_factories/: gameobjectfactory.h  playerfactory.cpp
peli1/src/input/: inputmanager.cpp  inputmanager.h
peli1/src/scenes/: level.cpp  level.h  level1.cpp  level1.h  level1factory.cpp  level1factory.h  levelfactory.h
peli1/src/shader/: shader.cpp  shader.h
peli1/src/systems/: collisionsystem.cpp  collisionsystem.h  gravitysystem.cpp  gravitysystem.h  movementsystem.cpp  movementsystem.h  playerbehavior.cpp  playerbehavior.h  renderer.cpp  renderer.h  systembase.h
peli1/src/texture/: playerkeyframes.cpp  texture.cpp  texturestorage.h
peli1/src/texture_components/: playerkeyframes.h  texture.h  texturefactory.cpp  texturefactory.h  texturestorage.h
peli1/src/util/: transformer.cpp  transformer.h
(+67 files in other folders)
